k8s/gitops/infra/aws/kyverno/templates/require_labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-mandatory-labels
  annotations:
    policies.kyverno.io/title: Require mandatory labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-app-label
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - monitoring
                - karpenter
                - kyverno
                - argocd

      validate:
        message: "The 'app' label is required."
        pattern:
          metadata:
            labels:
              app: "?*"
